dbus-binding-tool: forbid ReturnVal annotation after the first OUT <arg>

It has never actually worked correctly (invoke_object_method would always
treat the ReturnVal as if it had been the first OUT argument), so let's
only allow the situation that worked in practice.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=35952
Reviewed-by: Will Thompson <will.thompson@collabora.co.uk>